2005-08-17 Stewart Jamieson
 * a2c.py: fix origins of velo grid

2005-08-15 Magnus Hagdorn
 * litho_temp.cpt: new colourmap for temperatures of lithosphere
 * CF_colourmap.py: hooked up litho_temp.cpt
 * setup.py: ditto
 * CF_options.py: new options for specifying x and y axis, split up variable
   options into two methods
 * plotSpot.py: use options mentioned above and handle lithoz
 * CF_area.py: split up method image into two methods
 * CF_loadfile.py: add lithoz to check for 3Dness
 * CF_profile.py: add 2D profile extraction for litho_temp
 * CF_profilearea.py: option for plotting 2D litho_temp profile
 * plotProfile.py: we can also plot multiple times
 
2005-07-07 Magnus Hagdorn
 * CF_IOrsl.py: add methods to return min and max time
 * CF_file.py: fix small bug
 * CF_loadfile.py: fix bug in time method, add methods to get RSL residuals
   and 2D histogram of RSL residuals
 * CF_rsl.py: new class for plotting temporal histogram of RSL residuals
 * plotRSLhist.py: new program for plotting RSL histograms
 * setup.py: hook up plotRSLhist.py

2005-07-04 Magnus Hagdorn
 * CF_IOrsl.py: add dataset selector
 * CF_area.py: optionally plot legend when plotting rsl locs
 * plotRSL.py: speed up RSL plotting
 * plotRSLloc.py: new prog for plotting locations of RSL data
 * setup.py: hook up plotRSLloc.py

2005-06-24 Magnus Hagdorn
 * CF_colourmap.py: round min/max for auto-colourscale
 * CF_loadfile.py: add basal shear stress, cache calculated variables, fix
   minor bug

2005-06-15 Stewart Jamieson
 * CF_proj.py: fixed bug, added function to parse ESRI projection files
 * a2c.py: new program for converting ESRI ASCII files to netCDF
 * setup.py: install a2c.py

2005-05-31 Magnus Hagdorn
 * gthf.cpt: new colourmap for geothermal heat flux
 * CF_colourmap.py: registered gthf colourmap
 * setup.py: install colourmap
 * MANIFEST: ditto
 * plotProfile.py: ignore missing variables when plotting more than
   one file

2005-05-27 Magnus Hagdorn