@@ -3,25 +3,39 @@
 from distutils.core import setup, Extension
 import os, sys
 
-proj_prefix = None
+def check_lib(libname,prefix_var,header):
+    """Check if we can find header either in the directory where the environment
+    variable prefix_var points to, or /usr/local or /usr."""
 
-if proj_prefix is None:
+    prefix = []
+
     try:
-        proj_prefix=os.environ['PROJ_PREFIX']
+        prefix.append(os.environ[prefix_var])        
     except KeyError:
-        for proj_prefix in ['/usr/local', '/usr']:
-            proj_include = os.path.join(proj_prefix, 'include')
-            proj_lib = os.path.join(proj_prefix, 'lib')
-            if os.path.exists(os.path.join(proj_include, 'projects.h')):
-                break
-        else:
-            proj_prefix = None
-if proj_prefix is None:
-    raise RuntimeError, 'Cannot find proj4 library in /usr/local and /usr'
-else:
-    proj_include = os.path.join(proj_prefix, 'include')
-    proj_lib = os.path.join(proj_prefix, 'lib')
+        for p in ['/usr/local', '/usr']:
+            prefix.append(p)
+    for p in prefix:
+        include = os.path.join(p, 'include')
+        lib = os.path.join(p, 'lib')
+        if os.path.exists(os.path.join(include, header)):
+            break
+    else:
+        print 'Error, cannot find %s library in /usr/local and /usr.'%libname
+        print 'Set environment variable %s to point to the prefix'%prefix_var
+        print 'where %s is installed.'%libname
+        sys.exit(1)
+    return (include,lib)
 
+
+(proj_include, proj_lib) = check_lib('proj4','PROJ_PREFIX','projects.h')
+(gsl_include, gsl_lib)   = check_lib('GSL', 'GSL_PREFIX', 'gsl/gsl_errno.h')
+
+print
+print 'Configuration'
+print '-------------'
+print 'proj4: %s, %s'%(proj_include, proj_lib)
+print 'GSL:   %s, %s'%(gsl_include, gsl_lib)
+print
 
 ext_modules = [
     Extension('PyCF.proj',
@@ -29,6 +43,11 @@ ext_modules = [
               include_dirs=[proj_include],
               library_dirs=[proj_lib],
               libraries = ['proj']),
+    Extension('PyCF.TwoDspline',
+              ['src/2Dsplinemodule.c'],
+              include_dirs=[gsl_include],
+              library_dirs=[gsl_lib],
+              libraries = ['gsl','gslcblas']),
     ]
 data_files = [('share/PyCF/',['data/ice.cpt',
                               'data/mb.cpt',
